unpackaged/main/default/objects/Bank_Account__c/fields/ACH_ID__c.field-meta.xml
<CustomField>
    <fullName>ACH_ID__c</fullName>
    <label>ACH ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>