unpackaged/main/default/objects/Bank_Account__c/fields/ACH_Processor__c.field-meta.xml
<CustomField>
    <fullName>ACH_Processor__c</fullName>
    <label>ACH Processor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wells Fargo - NF Funding</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - QBF Funding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>