unpackaged/main/default/objects/Bank_Account__c/fields/Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Type__c</fullName>
    <description>This field will contain the type of account the funds will be deposited into.</description>
    <inlineHelpText>This field will contain the type of account the funds will be deposited into.</inlineHelpText>
    <label>Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>