unpackaged/main/default/objects/Bank_Account__c/fields/Bank_ACH_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_ACH_Code__c</fullName>
    <label>Bank ACH Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>