unpackaged/main/default/objects/Bank_Account__c/fields/BankRecordId__c.field-meta.xml
<CustomField>
    <fullName>BankRecordId__c</fullName>
    <description>Constant value to query for this record across orgs</description>
    <label>BankRecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>