unpackaged/main/default/objects/Bank_Account__c/fields/Batch_Header_Company__c.field-meta.xml
<CustomField>
    <fullName>Batch_Header_Company__c</fullName>
    <description>Value to appear in the Batch Header row of NACHA file in the Company Name place (position 05-20)</description>
    <label>Batch Header Company</label>
    <length>16</length>
    <type>Text</type>
</CustomField>