unpackaged/main/default/objects/Bank_Account__c/fields/Company_Entry_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Entry_Description__c</fullName>
    <label>Company Entry Description</label>
    <length>10</length>
    <type>Text</type>
</CustomField>