unpackaged/main/default/objects/Bank_Account__c/fields/Fed_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Fed_Tax_Id__c</fullName>
    <label>Fed Tax Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>