unpackaged/main/default/objects/Bank_Account__c/fields/National_Funding_Account__c.field-meta.xml
<CustomField>
    <fullName>National_Funding_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check box will indicate if this account is a National Funding Account.</description>
    <label>National Funding Account</label>
    <type>Checkbox</type>
</CustomField>