unpackaged/main/default/objects/Bank_Account__c/fields/Payee_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_s_Name__c</fullName>
    <label>Payee's Name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>