unpackaged/main/default/objects/Bank_Account__c/fields/Receiving_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Company_Name__c</fullName>
    <label>Receiving Company Name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>