unpackaged/main/default/objects/Bank_Account__c/recordTypes/Broker.recordType-meta.xml
<RecordType>
    <fullName>Broker</fullName>
    <active>true</active>
    <label>Broker</label>
</RecordType>